Corrected a few additional formatting errors in installer and man page.

--- a/latuxit.1
+++ b/latuxit.1
@@ -82,7 +82,7 @@ Where
 .I COLOR
 is one of the 68 standard colors defined in
 .IR ~/.latuxit/latuxit.colors ,
-or alternatively a
+or, alternatively, a
 .I COLOR
 in {R,G,B} format, where R,G,B=[0\-1.0], or [0\-255].
 .TP
