--- a/latuxit.1
+++ b/latuxit.1
@@ -23,6 +23,9 @@ latuxit \- create a cropped LaTeX equation in pdf and postscript format.
 .B latuxit
 .RI [ options ]
 .RI [ FILE ]
+.br
+.B latuxit
+.RI [ FILE ]
 .SH DESCRIPTION
 .PP
 .B LaTuXiT
@@ -134,7 +137,7 @@ on a
 that was previously created with
 .B latuxit
 will search the file for metadata and open the corresponding equation from the
-cache using the editor defined by the
+cache in the editor defined by the
 .I LATUXIT_EDITOR
 environment variable (see
 .B ENVIRONMENT VARIABLES
