--- a/README
+++ b/README
@@ -42,18 +42,21 @@ OPTIONS
        -e EQUATION, --equation EQUATION
 	      EQUATION in LaTeX markup. No $ symbols are needed. The  EQUATION
 	      should  be  surrounded by double quotation marks, i.e. "OPTION",
-	      to ensure that it is parsed correctly. If no EQUATION is	passed
-	      on  the  command-line then latuxit will open the EQUATION editor
-	      defined by the LATUXIT_EDITOR environment variable. If  pdflatex
+	      to ensure that it is parsed correctly. When the equation	starts
+	      with  a  minus sign make sure the character is enclosed in curly
+	      braces, i.e. "{-}..." , so that it isn't mistaken as an  identi‐
+	      fier  for	 a  command-line argument. If no EQUATION is passed on
+	      the command-line then latuxit  will  open	 the  EQUATION	editor
+	      defined  by the LATUXIT_EDITOR environment variable. If pdflatex
 	      fails to process an EQUATION the user will be given the opportu‐
 	      nity to edit it using LATUXIT_EDITOR.
 
        -c COLOR, --color COLOR
-	      Where COLOR  is  one  of	the  68	 standard  colors  defined  in
+	      Where  COLOR  is	one  of	 the  68  standard  colors  defined in
 	      ~/.latuxit/latuxit.colors, or, alternatively, a COLOR in {R,G,B}
-	      format, where R,G,B=[0-1.0], or [0-255]. RGB  colors  should  be
-	      surrounded  by double quotation marks, i.e. "{R,G,B}", to ensure
-	      they are parsed correctly. Also make sure that there aren't  any
+	      format,  where  R,G,B=[0-1.0],  or [0-255]. RGB colors should be
+	      surrounded by double quotation marks, i.e. "{R,G,B}", to	ensure
+	      they  are parsed correctly. Also make sure that there aren't any
 	      blank spaces on either side of any of the RGB values.
 
        -o FILE_PREFIX, --output FILE_PREFIX
@@ -67,20 +70,20 @@ OPTIONS
 	      Get help (loads the man page).
 
 FILES
-       file   Running latuxit on a  FILE  that	was  previously	 created  with
-	      latuxit  will  search  the file for metadata and open the corre‐
-	      sponding equation from the cache in the editor  defined  by  the
-	      LATUXIT_EDITOR  environment  variable (see ENVIRONMENT VARIABLES
-	      section). This allows the user to	 modify	 an  existing  latuxit
+       file   Running  latuxit	on  a  FILE  that  was previously created with
+	      latuxit will search the file for metadata and  open  the	corre‐
+	      sponding	equation  from	the cache in the editor defined by the
+	      LATUXIT_EDITOR environment variable (see	ENVIRONMENT  VARIABLES
+	      section).	 This  allows  the  user to modify an existing latuxit
 	      image. The image and equation are overwritten unless a different
 	      FILE_PREFIX is specified.
 
 ENVIRONMENT VARIABLES
-       Latuxit's behavior is affected by the following environment  variables.
+       Latuxit's  behavior is affected by the following environment variables.
        These can be sourced from ~/.latuxitrc or ~/.latuxit/latuxitrc.
 
        LATUXIT_EDITOR
-	      This  variable  specifies the editor to be used for typing equa‐
+	      This variable specifies the editor to be used for	 typing	 equa‐
 	      tions. The default option is vim.
 
        LATUXIT_COLOR
@@ -91,11 +94,11 @@ ENVIRONMENT VARIABLES
 	      The size of the latuxit EQUATION cache. The default is 1000.
 
        LATUXIT_POSTSCRIPT
-	      Whether  to  save	 a  postscript	copy  of the output image. The
+	      Whether to save a postscript  copy  of  the  output  image.  The
 	      default is true.
 
        LATUXIT_PURGE_CONFIRMATION
-	      Whether to ask for  confirmation	before	purging	 the  equation
+	      Whether  to  ask	for  confirmation  before purging the equation
 	      cache. The default is true.
 
 CREDITS
@@ -104,9 +107,9 @@ CREDITS
        Ideas taken from Giovanni Lanzani (www.lanzani.nl/latexit.html).
 
 BUGS
-       latuxit	metadata  is written as a comment to the bottom of the pdf and
-       postscript image files. While this  doesn't  cause  problems  with  the
-       viewers	for  which  latuxit  has been tested, this may cause issues in
+       latuxit metadata is written as a comment to the bottom of the  pdf  and
+       postscript  image  files.  While	 this  doesn't cause problems with the
+       viewers for which latuxit has been tested, this	may  cause  issues  in
        some rare cases.
 
        Email bug reports to lester.hedges+latuxit@gmail.com.
