--- a/latuxit.1
+++ b/latuxit.1
@@ -65,7 +65,7 @@ and
 images allows
 .B latuxit
 to match an image to an equation in the database. While it is possible to
-directly embedd equations into the output images, inconsistencies in equation
+directly embed equations into the output images, inconsistencies in equation
 formatting (particularly for long, multi-line equations) makes it difficult to
 parse the metadata in a well defined way. Unfortuntely this means that one can
 no longer edit an image if the equation cache is deleted or corrupt. In
