--- a/latuxit.1
+++ b/latuxit.1
@@ -86,7 +86,7 @@ will proceed as normal once the file has been saved.
 .I EQUATION
 in LaTeX markup. No $ symbols are needed. The
 .B EQUATION
-should be surrounded by double quotation marks, i.e. "\fIOPTION\fP"\fR, to
+should be surrounded by double quotation marks, i.e. "\fIEQUATION\fP"\fR, to
 ensure that it is parsed correctly. When the equation starts with a minus
 sign make sure the character is enclosed in curly braces, 
 i.e. "\fI{-}...\fP"\fR , so that it isn't mistaken as an identifier for a
