List mode no longer pipes through less.

--- a/latuxit.1
+++ b/latuxit.1
@@ -130,10 +130,7 @@ The default is
 .BR latuxit .
 .TP
 .BR \-l ", " \-\^\-list
-Lists all equations in the cache along with their hash. Output is
-piped through
-.B less
-for ease of viewing.
+Lists all equations in the cache along with their hash.
 .TP
 .BI \-s " EQUATION" "\fR,\fP \-\^\-search "EQUATION
 Searches the equation cache for all partial matches of
