Added check for empty search string.

--- a/latuxit.1
+++ b/latuxit.1
@@ -85,7 +85,7 @@ with no options will open the editor defined by the
 .B LATUXIT_EDITOR
 environment variable. The user can then type an equation and
 .B latuxit
-will proceed as normal once the file has been saved.
+will proceed as normal once the file has been saved and closed.
 .TP
 .BI \-e " EQUATION" "\fR,\fP \-\^\-equation "EQUATION
 .I EQUATION
