--- a/latuxit.1
+++ b/latuxit.1
@@ -182,11 +182,11 @@ Get help (loads the man page).
 .
 .SH FILES
 .TP
-.B file
+.B image
 Running
 .B latuxit
 on a
-.I FILE
+.I IMAGE
 that was previously created with
 .B latuxit
 will search the file for metadata and open the corresponding equation from the
