Fixed a few formatting errors.

--- a/latuxit.1
+++ b/latuxit.1
@@ -101,7 +101,7 @@ is trivial to rescale them afterwards.
 latuxit
 supports the following short- and long-form command-line options. Invoking
 .B latuxit
-when no equation has been passed via the command-line option or stdin
+when no equation has been passed using the command-line option or via stdin
 will open the editor defined by the
 .B LATUXIT_EDITOR
 environment variable. The user can then type an equation and
@@ -217,7 +217,7 @@ The
 .I COLOR
 of the equation. The default is
 .BR Black ,
-but the command line option
+but the command-line option
 .B \-c
 will take precedence.
 .TP
