--- a/latuxit.1
+++ b/latuxit.1
@@ -1,4 +1,4 @@
-.\" Copyright (c) 2012, 2013, 2014, Lester Hedges <lester.hedges@gmail.com>
+.\" Copyright (c) 2012-2015, Lester Hedges <lester.hedges@gmail.com>
 .\"
 .\" %%%LICENSE_START(GPLv2+_DOC_FULL)
 .\" This is free documentation; you can redistribute it and/or
