Added note on hash prefix.

--- a/latuxit.1
+++ b/latuxit.1
@@ -217,7 +217,8 @@ will open the equation for editing with
 Hashes are generated using the
 .B md5sum
 algorithm. A single letter prefix is added to specify the equation environment
-that was used to process the equation.
+that was used to process the equation, e.g. 'd' for
+.BR displaymath .
 .TP
 .BR \-b ", " \-\^\-batch
 Run
